--- a/navbar.css
+++ b/navbar.css
@@ -1,40 +1,69 @@
-#topNAV{
+body{
   margin: 0px;
-}
-#topNAV li a{
- text-decration: none;
- display: inline;
- float: right;
- padding:15px;
-
-}
- a:hover{
-  background-color: black;
+  background-color: #AE0000;
 }
 
-a{
- text-decoration: none;
- font-family: monospace;
- Font-size: 45px;
- color: orange;
+#topNav{
+  background-color: maroon;
+  height: 15%;
+  margin: 0px;
+border-bottom: 7px solid black;
 }
 
-#topNAV li a:hover{
- color: yellow;
+#topNav li{
+    text-decoration: none;
+    display: inline;
+    float: right;
+    padding-right: 35px;
+}
+
+
+#topNav li a{
+     text-decoration: none;
+     font-family:monospace;
+     font-size: 35px;
+     color: orange;
+}
+
+#topNav li a:hover{
+  color: aqua;
 }
 
 #menuNav{
-  height: 100%
-    Width: 45px;
-  background-color: yellow;
-  border-right: 2px solid black;
-  margin: 0px;
+    height: 100%;
+    width:  150px;
+    background-color: maroon;
+    border-right: 5px solid black;
+    margin: 0px;
+    float: left;
+
 }
 
-#menuNAV li{
-  list-style: none'
-  font size-size: 15px;
-  font-family: sans-serif;;
-  color:black
-  padding: 25px;
+#menuNav li{
+  list-style: georgian;
+  font-size: 25px;
+  font-family: monospace;
+  padding-top: 15px;
+  float: left;
+  color: orange;
+}
+#menuNav li a{
+     text-decoration: none;
+     font-family:monospace;
+     font-size: 25px;
+     color: orange;
+}
+#menuNav li a:hover{
+  color: aqua;
+}
+
+#slogan{
+  font-size: 35px;
+  font-family: fantasy;
+  color: white;
+}
+
+#tit{
+  font-family: Georgia;
+  color: black;
 }
